tests/ui/parser/macro-mismatched-delim-paren-brace.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/macro-mismatched-delim-paren-brace.rs:2:10
   |
LL |     foo! (
   |          ^ unclosed delimiter
LL |         bar, "baz", 1, 2.0
LL |     }
   |     ^ mismatched closing delimiter

error: aborting due to 1 previous error

